--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ div, p {
     float: right;
     text-align: center;
     color: #9d9d9d;
-    background-color: #eaeeff;
+    background-color: #eeffee;
     width: 100px;
     margin: 10px;
     padding: 10px;
@@ -104,7 +104,7 @@ div, p {
     float: right;
     text-align: center;
     color: #9a9a9a;
-    background-color: #ffeeea;
+    background-color: #ededff;
     width: 100px;
     margin: 10px;
     padding: 10px;
